--- a/aio.ipynb
+++ b/aio.ipynb
@@ -29885,7 +29885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -35335,6 +35335,184 @@
     " 'pred': 0,\n",
     " 'ori_labels': [0, 0, 0, 1],\n",
     " 'major': 0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 同比例对比"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from load_data_fns import key_map\n",
+    "\n",
+    "# results_dir = \"outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/52/evaluator/step=68223/VALIDATION.json\"\n",
+    "results_dir = \"outputs/LCQMC/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/14/evaluator/step=37307/TEST.json\"\n",
+    "with open(results_dir, \"r\") as f:\n",
+    "    metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases = json.load(f)\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "from load_data_fns import key_map\n",
+    "\n",
+    "dataset_name = results_dir.split(\"/\")[1]\n",
+    "idx_controdictory, idx_controversial, idx_consistent = controversial_cases.keys(), confused_cases.keys(), definite_cases.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8698, 1811, 1991)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(idx_consistent), len(idx_controdictory), len(idx_controversial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11171\n",
+      "12500\n",
+      "12500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(8698, 1811, 1991, 3802)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from load_data_fns import key_map\n",
+    "\n",
+    "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14/evaluator/step=29846/TEST.json\"\n",
+    "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.6/seed_of_stage1=14/1/16/2e-06/54/evaluator/step=912/TEST.json\"\n",
+    "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-P_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=14/1/16/2e-06/11/evaluator/step=912/TEST.json\"\n",
+    "with open(results_dir, \"r\") as f:\n",
+    "    metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases = json.load(f)\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "from load_data_fns import key_map\n",
+    "\n",
+    "dataset_name = results_dir.split(\"/\")[1]\n",
+    "\n",
+    "\n",
+    "all_cases = dict()\n",
+    "for cases in controversial_cases, confused_cases, definite_cases:\n",
+    "    all_cases.update(cases)\n",
+    "df_controdictory, df_controversial, df_consistent = [], [], []\n",
+    "\n",
+    "\n",
+    "if \"TWR-P\" in results_dir:\n",
+    "    results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14/evaluator/step=29846/TEST.json\"\n",
+    "    with open(results_dir, \"r\") as f:\n",
+    "        metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases = json.load(f)\n",
+    "        all_cases.update(definite_cases)\n",
+    "        print(len(definite_cases))\n",
+    "print(len(all_cases))\n",
+    "# print(len(set(all_cases.keys()) & set(definite_cases.keys())))\n",
+    "\n",
+    "\n",
+    "for key, value in all_cases.items():\n",
+    "    label = value[\"labels\"]\n",
+    "    pred = value[\"pred\"]\n",
+    "    # ori_labels = value[\"ori_labels\"]\n",
+    "    if key in idx_consistent:\n",
+    "        df_consistent.append({\"label\": label, \"pred\": pred})\n",
+    "    elif key in idx_controdictory:\n",
+    "        df_controdictory.append({\"label\": label, \"pred\": pred})\n",
+    "    elif key in idx_controversial:\n",
+    "        df_controversial.append({\"label\": label, \"pred\": pred})\n",
+    "    else:\n",
+    "        raise IndexError()\n",
+    "\n",
+    "df_controversial, df_controdictory, df_consistent = pd.DataFrame(df_controversial), pd.DataFrame(df_controdictory), pd.DataFrame(df_consistent)\n",
+    "df_inconsistent = pd.concat([df_controversial, df_controdictory], axis=0)\n",
+    "print(len(df_consistent) + len(df_inconsistent))\n",
+    "len(df_consistent), len(df_controdictory), len(df_controversial), len(df_inconsistent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92.53\n",
+      "80.01\n",
+      "81.06\n",
+      "79.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "for df in (df_consistent, df_inconsistent, df_controdictory, df_controversial):\n",
+    "    print(round(accuracy_score(df[\"label\"], df[\"pred\"]) * 100, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "df = pd.concat((df_consistent, df_inconsistent), axis=0)\n",
+    "print(round(accuracy_score(df[\"label\"], df[\"pred\"]) * 100, 2))"
    ]
   },
   {
