--- a/aio.ipynb
+++ b/aio.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-17 13:51:31,635\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-22 01:41:35,914\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -45,7 +45,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-      "2024-04-17 13:51:31,640\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-22 01:41:35,918\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -60,19 +60,19 @@
       "{'val': {'accuracy': 86.09, 'F1-score': 85.61, 'loss': 2.04},\n",
       " 'test': {'accuracy': 85.96, 'F1-score': 85.61, 'loss': 2.06}}\n",
       "---------TWR-P---------\n",
-      "109 149 50 68 11\n",
-      "{97: {'val': {'accuracy': 86.21, 'F1-score': 85.66, 'loss': 6.24},\n",
-      "      'test': {'accuracy': 86.23, 'F1-score': 85.76, 'loss': 6.1}},\n",
-      " 43: {'val': {'accuracy': 86.35, 'F1-score': 85.91, 'loss': 5.07},\n",
-      "      'test': {'accuracy': 86.0, 'F1-score': 85.67, 'loss': 5.4}},\n",
-      " 10: {'val': {'accuracy': 85.86, 'F1-score': 85.13, 'loss': 6.23},\n",
-      "      'test': {'accuracy': 85.97, 'F1-score': 85.37, 'loss': 6.04}},\n",
-      " 53: {'val': {'accuracy': 85.9, 'F1-score': 85.13, 'loss': 5.34},\n",
-      "      'test': {'accuracy': 85.84, 'F1-score': 85.21, 'loss': 5.8}},\n",
-      " 46: {'val': {'accuracy': 86.32, 'F1-score': 85.78, 'loss': 5.26},\n",
-      "      'test': {'accuracy': 85.84, 'F1-score': 85.42, 'loss': 5.48}}}\n",
-      "{'val': {'accuracy': 86.13, 'F1-score': 85.52, 'loss': 5.63},\n",
-      " 'test': {'accuracy': 85.98, 'F1-score': 85.49, 'loss': 5.76}}\n"
+      "28 26 30 31 34\n",
+      "{97: {'val': {'accuracy': 86.54, 'F1-score': 86.32, 'loss': 4.21},\n",
+      "      'test': {'accuracy': 86.63, 'F1-score': 86.5, 'loss': 4.32}},\n",
+      " 43: {'val': {'accuracy': 86.42, 'F1-score': 86.12, 'loss': 4.55},\n",
+      "      'test': {'accuracy': 86.37, 'F1-score': 86.13, 'loss': 4.54}},\n",
+      " 53: {'val': {'accuracy': 86.47, 'F1-score': 86.12, 'loss': 4.99},\n",
+      "      'test': {'accuracy': 86.25, 'F1-score': 86.06, 'loss': 5.42}},\n",
+      " 46: {'val': {'accuracy': 86.84, 'F1-score': 86.58, 'loss': 4.28},\n",
+      "      'test': {'accuracy': 86.14, 'F1-score': 85.99, 'loss': 4.61}},\n",
+      " 10: {'val': {'accuracy': 86.32, 'F1-score': 85.87, 'loss': 4.87},\n",
+      "      'test': {'accuracy': 86.08, 'F1-score': 85.8, 'loss': 4.87}}}\n",
+      "{'val': {'accuracy': 86.52, 'F1-score': 86.2, 'loss': 4.58},\n",
+      " 'test': {'accuracy': 86.29, 'F1-score': 86.1, 'loss': 4.75}}\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
     "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-P_nodrop_single_model_hardcases_from_baseline_warmboost_mix_easycases_negtimes={times}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
-    "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-P_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
+    "    # seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-P_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
     "\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
@@ -139,27 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------TWR-H---------\n",
-      "109 38 50 68 11\n",
-      "{10: {'val': {'accuracy': 85.26, 'F1-score': 84.42, 'loss': 2.65},\n",
-      "      'test': {'accuracy': 85.67, 'F1-score': 85.01, 'loss': 2.59}},\n",
-      " 97: {'val': {'accuracy': 85.44, 'F1-score': 84.69, 'loss': 2.61},\n",
-      "      'test': {'accuracy': 85.6, 'F1-score': 84.93, 'loss': 2.6}},\n",
-      " 46: {'val': {'accuracy': 85.67, 'F1-score': 84.94, 'loss': 2.26},\n",
-      "      'test': {'accuracy': 85.56, 'F1-score': 84.94, 'loss': 2.27}},\n",
-      " 43: {'val': {'accuracy': 85.94, 'F1-score': 85.32, 'loss': 2.24},\n",
-      "      'test': {'accuracy': 85.53, 'F1-score': 85.02, 'loss': 2.31}},\n",
-      " 53: {'val': {'accuracy': 85.64, 'F1-score': 84.95, 'loss': 2.47},\n",
-      "      'test': {'accuracy': 84.87, 'F1-score': 84.22, 'loss': 2.54}}}\n",
-      "{'val': {'accuracy': 85.59, 'F1-score': 84.86, 'loss': 2.45},\n",
-      " 'test': {'accuracy': 85.45, 'F1-score': 84.82, 'loss': 2.46}}\n"
+      "---------TWR-H---------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-22 01:41:49,391 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_mix_easycases_negtimes=0.1/seed_of_stage1=46/1/16/3e-05/53\u001b[0m\n",
+      "22 4 5 12 52\n",
+      "{97: {'val': {'accuracy': 85.7, 'F1-score': 85.35, 'loss': 2.07},\n",
+      "      'test': {'accuracy': 85.83, 'F1-score': 85.61, 'loss': 2.11}},\n",
+      " 10: {'val': {'accuracy': 85.46, 'F1-score': 85.11, 'loss': 2.17},\n",
+      "      'test': {'accuracy': 85.64, 'F1-score': 85.36, 'loss': 2.21}},\n",
+      " 53: {'val': {'accuracy': 85.44, 'F1-score': 85.09, 'loss': 2.07},\n",
+      "      'test': {'accuracy': 85.63, 'F1-score': 85.38, 'loss': 2.14}},\n",
+      " 43: {'val': {'accuracy': 85.87, 'F1-score': 85.52, 'loss': 1.98},\n",
+      "      'test': {'accuracy': 85.52, 'F1-score': 85.25, 'loss': 2.05}},\n",
+      " 46: {'val': {'accuracy': 85.7, 'F1-score': 85.5, 'loss': 1.91},\n",
+      "      'test': {'accuracy': 85.48, 'F1-score': 85.4, 'loss': 1.97}}}\n",
+      "{'val': {'accuracy': 85.63, 'F1-score': 85.31, 'loss': 2.04},\n",
+      " 'test': {'accuracy': 85.62, 'F1-score': 85.4, 'loss': 2.1}}\n"
      ]
     }
    ],
@@ -172,7 +179,7 @@
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
     "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_mix_easycases_negtimes={times}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
-    "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
+    "    # seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1)\n",
@@ -2657,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2672,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-16 13:42:59,068\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "2024-04-21 20:44:53,348\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
       "{9: {'val': {'accuracy': 88.73, 'F1-score': 91.99, 'loss': 0.28},\n",
       "     'test': {'accuracy': 87.3, 'F1-score': 90.73, 'loss': 0.3}},\n",
       " 37: {'val': {'accuracy': 89.22, 'F1-score': 92.25, 'loss': 0.28},\n",
@@ -2679,7 +2686,7 @@
       "{'val': {'accuracy': 89.02, 'F1-score': 92.08, 'loss': 0.28},\n",
       " 'test': {'accuracy': 86.99, 'F1-score': 90.32, 'loss': 0.32}}\n",
       "---------TWR---------\n",
-      "2024-04-16 13:42:59,078\u001b[32m <INFO> WatchDog: success/total: 57/57\u001b[0m\n",
+      "2024-04-21 20:44:53,359\u001b[32m <INFO> WatchDog: success/total: 57/57\u001b[0m\n",
       "best_sedds_of_stage1:  9 37 59 2 44\n",
       "{9: {'val': {'accuracy': 88.24, 'F1-score': 91.58, 'loss': 1.51},\n",
       "     'test': {'accuracy': 88.41, 'F1-score': 91.47, 'loss': 1.54}},\n",
