--- a/aio.ipynb
+++ b/aio.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-23 21:26:00,465\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-24 11:47:27,537\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -54,7 +54,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-      "2024-04-23 21:26:00,469\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-24 11:47:27,542\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -157,18 +157,21 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H---------\n",
-      "2024-04-23 22:39:07,202 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.6_only_pos_record_pipline/seed_of_stage1=46/1/16/3e-05/14\u001b[0m\n",
-      "14 14 14 14\n",
-      "{97: {'val': {'acc_pipline': 86.12, 'f1_pipline': 85.54, 'accuracy': 85.09, 'F1-score': 84.3, 'loss': 2.23},\n",
-      "      'test': {'acc_pipline': 85.62, 'f1_pipline': 85.04, 'accuracy': 84.87, 'F1-score': 84.11, 'loss': 2.27}},\n",
-      " 53: {'val': {'acc_pipline': 85.36, 'f1_pipline': 84.46, 'accuracy': 84.72, 'F1-score': 83.76, 'loss': 2.42},\n",
-      "      'test': {'acc_pipline': 85.32, 'f1_pipline': 84.57, 'accuracy': 84.69, 'F1-score': 83.85, 'loss': 2.39}},\n",
-      " 43: {'val': {'acc_pipline': 85.84, 'f1_pipline': 85.33, 'accuracy': 85.09, 'F1-score': 84.4, 'loss': 2.06},\n",
-      "      'test': {'acc_pipline': 85.76, 'f1_pipline': 85.38, 'accuracy': 84.54, 'F1-score': 83.92, 'loss': 2.11}},\n",
-      " 10: {'val': {'acc_pipline': 85.49, 'f1_pipline': 84.69, 'accuracy': 84.76, 'F1-score': 83.86, 'loss': 2.34},\n",
-      "      'test': {'acc_pipline': 84.83, 'f1_pipline': 84.08, 'accuracy': 83.99, 'F1-score': 83.08, 'loss': 2.38}}}\n",
-      "{'val': {'acc_pipline': 85.7, 'f1_pipline': 85.0, 'accuracy': 84.92, 'F1-score': 84.08, 'loss': 2.26},\n",
-      " 'test': {'acc_pipline': 85.38, 'f1_pipline': 84.77, 'accuracy': 84.52, 'F1-score': 83.74, 'loss': 2.29}}\n"
+      "2024-04-24 12:04:50,362 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=46/1/16/3e-05/37\u001b[0m\n",
+      "2024-04-24 12:04:50,364 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=46/1/16/3e-05/66\u001b[0m\n",
+      "14 23 6 17 5\n",
+      "{97: {'val': {'acc_pipline': 86.43, 'f1_pipline': 86.08, 'accuracy': 85.91, 'F1-score': 85.6, 'loss': 2.09},\n",
+      "      'test': {'acc_pipline': 86.19, 'f1_pipline': 85.92, 'accuracy': 86.01, 'F1-score': 85.81, 'loss': 2.15}},\n",
+      " 53: {'val': {'acc_pipline': 86.22, 'f1_pipline': 85.72, 'accuracy': 85.52, 'F1-score': 85.21, 'loss': 2.26},\n",
+      "      'test': {'acc_pipline': 86.08, 'f1_pipline': 85.71, 'accuracy': 85.88, 'F1-score': 85.67, 'loss': 2.38}},\n",
+      " 10: {'val': {'acc_pipline': 86.24, 'f1_pipline': 85.78, 'accuracy': 85.62, 'F1-score': 85.35, 'loss': 2.09},\n",
+      "      'test': {'acc_pipline': 85.92, 'f1_pipline': 85.56, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.14}},\n",
+      " 43: {'val': {'acc_pipline': 86.29, 'f1_pipline': 86.0, 'accuracy': 85.96, 'F1-score': 85.81, 'loss': 1.93},\n",
+      "      'test': {'acc_pipline': 86.12, 'f1_pipline': 85.98, 'accuracy': 85.73, 'F1-score': 85.66, 'loss': 1.99}},\n",
+      " 46: {'val': {'acc_pipline': 86.23, 'f1_pipline': 85.88, 'accuracy': 85.59, 'F1-score': 85.27, 'loss': 2.03},\n",
+      "      'test': {'acc_pipline': 85.99, 'f1_pipline': 85.75, 'accuracy': 85.68, 'F1-score': 85.51, 'loss': 2.01}}}\n",
+      "{'val': {'acc_pipline': 86.28, 'f1_pipline': 85.89, 'accuracy': 85.72, 'F1-score': 85.45, 'loss': 2.08},\n",
+      " 'test': {'acc_pipline': 86.06, 'f1_pipline': 85.78, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.13}}\n"
      ]
     }
    ],
@@ -179,8 +182,9 @@
     "metric_for_compare = \"accuracy\"\n",
     "\n",
     "times = \"0.1\"\n",
-    "ratio = 0.6\n",
+    "ratio = 0.2\n",
     "# times=\"None\"\n",
+    "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
@@ -188,13 +192,20 @@
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
+    "    seeds_not_del = []\n",
+    "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
+    "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
+    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "    # print(seeds_not_del)\n",
     "    if _mean:\n",
     "        metric_dicts[seed_of_stage1] = _mean\n",
     "        best_seed = list(_metric_dict_topk.keys())[0]\n",
     "        seeds.append(str(best_seed))\n",
-    "        # for seed_dir in seeds_dir.iterdir():\n",
-    "        #     if int(seed_dir.name) != best_seed and int(seed_dir.name) in _metric_dicts:\n",
-    "        #         shutil.rmtree(seed_dir)\n",
+    "        for seed_dir in seeds_dir.iterdir():\n",
+    "            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
+    "                shutil.rmtree(seed_dir)\n",
+    "                # print(seed_dir)\n",
+    "\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
     "print(\" \".join(seeds))\n",
     "pp(metric_dict_topk, width=120)\n",
