--- a/aio.ipynb
+++ b/aio.ipynb
@@ -32,11 +32,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-=======
    "execution_count": 2,
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
    "metadata": {},
    "outputs": [
     {
@@ -45,11 +41,7 @@
      "text": [
       "[2024-04-23 02:29:20,786] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------baseline---------\n",
-<<<<<<< HEAD
-      "2024-04-24 11:47:27,537\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
-=======
       "2024-04-23 02:29:27,209\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -63,11 +55,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-<<<<<<< HEAD
-      "2024-04-24 11:47:27,542\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
-=======
       "2024-04-23 02:29:27,213\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -162,11 +150,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 43,
-=======
    "execution_count": 3,
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
    "metadata": {},
    "outputs": [
     {
@@ -174,23 +158,6 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H---------\n",
-<<<<<<< HEAD
-      "2024-04-24 12:04:50,362 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=46/1/16/3e-05/37\u001b[0m\n",
-      "2024-04-24 12:04:50,364 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_only_pos_record_pipline/seed_of_stage1=46/1/16/3e-05/66\u001b[0m\n",
-      "14 23 6 17 5\n",
-      "{97: {'val': {'acc_pipline': 86.43, 'f1_pipline': 86.08, 'accuracy': 85.91, 'F1-score': 85.6, 'loss': 2.09},\n",
-      "      'test': {'acc_pipline': 86.19, 'f1_pipline': 85.92, 'accuracy': 86.01, 'F1-score': 85.81, 'loss': 2.15}},\n",
-      " 53: {'val': {'acc_pipline': 86.22, 'f1_pipline': 85.72, 'accuracy': 85.52, 'F1-score': 85.21, 'loss': 2.26},\n",
-      "      'test': {'acc_pipline': 86.08, 'f1_pipline': 85.71, 'accuracy': 85.88, 'F1-score': 85.67, 'loss': 2.38}},\n",
-      " 10: {'val': {'acc_pipline': 86.24, 'f1_pipline': 85.78, 'accuracy': 85.62, 'F1-score': 85.35, 'loss': 2.09},\n",
-      "      'test': {'acc_pipline': 85.92, 'f1_pipline': 85.56, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.14}},\n",
-      " 43: {'val': {'acc_pipline': 86.29, 'f1_pipline': 86.0, 'accuracy': 85.96, 'F1-score': 85.81, 'loss': 1.93},\n",
-      "      'test': {'acc_pipline': 86.12, 'f1_pipline': 85.98, 'accuracy': 85.73, 'F1-score': 85.66, 'loss': 1.99}},\n",
-      " 46: {'val': {'acc_pipline': 86.23, 'f1_pipline': 85.88, 'accuracy': 85.59, 'F1-score': 85.27, 'loss': 2.03},\n",
-      "      'test': {'acc_pipline': 85.99, 'f1_pipline': 85.75, 'accuracy': 85.68, 'F1-score': 85.51, 'loss': 2.01}}}\n",
-      "{'val': {'acc_pipline': 86.28, 'f1_pipline': 85.89, 'accuracy': 85.72, 'F1-score': 85.45, 'loss': 2.08},\n",
-      " 'test': {'acc_pipline': 86.06, 'f1_pipline': 85.78, 'accuracy': 85.83, 'F1-score': 85.66, 'loss': 2.13}}\n"
-=======
       "2024-04-23 02:29:37,451 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_mix_easycases_negtimes=0.1/seed_of_stage1=97/1/16/3e-05/69\u001b[0m\n",
       "22 4 5 63 52\n",
       "{97: {'val': {'accuracy': 85.7, 'F1-score': 85.35, 'loss': 2.07},\n",
@@ -205,7 +172,6 @@
       "      'test': {'accuracy': 85.48, 'F1-score': 85.4, 'loss': 1.97}}}\n",
       "{'val': {'accuracy': 85.57, 'F1-score': 85.25, 'loss': 2.05},\n",
       " 'test': {'accuracy': 85.64, 'F1-score': 85.42, 'loss': 2.1}}\n"
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
      ]
     }
    ],
@@ -214,37 +180,20 @@
     "times = \"0.1\"\n",
     "ratio = 0.2\n",
     "# times=\"None\"\n",
-    "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
     "    seeds_dir = f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_mix_easycases_negtimes={times}/seed_of_stage1={seed_of_stage1}/1/16/3e-05\"\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
-<<<<<<< HEAD
-    "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
-    "    seeds_not_del = []\n",
-    "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
-    "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
-    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
-    "    # print(seeds_not_del)\n",
-=======
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1)\n",
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
     "    if _mean:\n",
     "        metric_dicts[seed_of_stage1] = _mean\n",
     "        best_seed = list(_metric_dict_topk.keys())[0]\n",
     "        seeds.append(str(best_seed))\n",
     "        for seed_dir in seeds_dir.iterdir():\n",
-<<<<<<< HEAD
-    "            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
-    "                shutil.rmtree(seed_dir)\n",
-    "                # print(seed_dir)\n",
-    "\n",
-=======
     "            if int(seed_dir.name) != best_seed and int(seed_dir.name) in _metric_dicts:\n",
     "                shutil.rmtree(seed_dir)\n",
->>>>>>> 5c6c14750d608bc34ad3f9f35d3f0bf9ea13f0fc
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
     "print(\" \".join(seeds))\n",
     "pp(metric_dict_topk)\n",
@@ -820,7 +769,6 @@
     "import shutil\n",
     "from pathlib import Path\n",
     "\n",
-    "\n",
     "top_k = 5\n",
     "\n",
     "print(\"---------baseline---------\")\n",
@@ -882,7 +830,6 @@
     "times = \"0.1\"\n",
     "ratio = 1\n",
     "# times=\"None\"\n",
-    "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
@@ -920,43 +867,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------TWR---------\n",
-      "2024-04-24 12:09:42,721 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/109\u001b[0m\n",
-      "2024-04-24 12:09:42,722 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/38\u001b[0m\n",
-      "2024-04-24 12:09:42,723 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/18\u001b[0m\n",
-      "2024-04-24 12:09:42,724 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/2\u001b[0m\n",
-      "2024-04-24 12:09:42,724 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/5\u001b[0m\n",
-      "2024-04-24 12:09:42,725 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/0\u001b[0m\n",
-      "2024-04-24 12:09:42,726 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/11\u001b[0m\n",
-      "2024-04-24 12:09:42,726 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/42\u001b[0m\n",
-      "2024-04-24 12:09:42,727 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/4\u001b[0m\n",
-      "2024-04-24 12:09:42,728 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14\u001b[0m\n",
-      "2024-04-24 12:09:42,729 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/7\u001b[0m\n",
-      "2024-04-24 12:09:42,729 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/17\u001b[0m\n",
-      "2024-04-24 12:09:42,730 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/19\u001b[0m\n",
-      "2024-04-24 12:09:42,731 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/12\u001b[0m\n",
-      "2024-04-24 12:09:42,731 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/16\u001b[0m\n",
-      "2024-04-24 12:09:42,732 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/1\u001b[0m\n",
-      "2024-04-24 12:09:42,733 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/8\u001b[0m\n",
-      "2024-04-24 12:09:42,733 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/54\u001b[0m\n",
-      "2024-04-24 12:09:42,734 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/15\u001b[0m\n",
-      "2024-04-24 12:09:42,735 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/3\u001b[0m\n",
-      "2024-04-24 12:09:42,735 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/6\u001b[0m\n",
-      "2024-04-24 12:09:42,736 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/13\u001b[0m\n",
-      "2024-04-24 12:09:42,737 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/10\u001b[0m\n",
-      "2024-04-24 12:09:42,737 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/28\u001b[0m\n",
-      "2024-04-24 12:09:42,738 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/62\u001b[0m\n",
-      "2024-04-24 12:09:42,739 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/25\u001b[0m\n",
-      "2024-04-24 12:09:42,739 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/26\u001b[0m\n",
-      "2024-04-24 12:09:42,740\u001b[32m <INFO> WatchDog: success/total: 0/27\u001b[0m\n",
-      "best_sedds_of_stage1:  \n",
+      "---------baseline---------\n",
+      "2024-04-24 12:35:47,896 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/42\u001b[0m\n",
+      "2024-04-24 12:35:47,896\u001b[32m <INFO> WatchDog: success/total: 0/1\u001b[0m\n",
       "{}\n",
       "{}\n"
      ]
@@ -971,28 +891,28 @@
     "\n",
     "top_k = 5\n",
     "\n",
-    "# print(\"---------baseline---------\")\n",
-    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/LCQMC/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
-    "# # metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "print(\"---------baseline---------\")\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
     "# seeds = \"29 109 38 14 44\"\n",
     "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "# pp(metric_dict_topk)\n",
-    "# pp(mean)\n",
-    "\n",
-    "\n",
-    "print(\"---------TWR---------\")\n",
-    "seeds_dir = \"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
-    "seeds_dir = Path(seeds_dir)\n",
-    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
-    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "best_seeds_of_stage1 = metric_dict_topk.keys()\n",
-    "if len(best_seeds_of_stage1) >= 10:\n",
-    "    for seed_dir in seeds_dir.iterdir():\n",
-    "        if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
-    "            shutil.rmtree(seed_dir)\n",
-    "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
     "pp(metric_dict_topk)\n",
-    "pp(mean)"
+    "pp(mean)\n",
+    "\n",
+    "\n",
+    "# print(\"---------TWR---------\")\n",
+    "# seeds_dir = \"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
+    "# seeds_dir = Path(seeds_dir)\n",
+    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# best_seeds_of_stage1 = metric_dict_topk.keys()\n",
+    "# if len(best_seeds_of_stage1) >= 10:\n",
+    "#     for seed_dir in seeds_dir.iterdir():\n",
+    "#         if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
+    "#             shutil.rmtree(seed_dir)\n",
+    "# print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
+    "# pp(metric_dict_topk)\n",
+    "# pp(mean)"
    ]
   },
   {
