--- a/aio.ipynb
+++ b/aio.ipynb
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-24 12:09:21,629\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-24 14:43:14,664\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{29: {'val': {'accuracy': 89.18, 'F1-score': 89.09, 'loss': 0.3},\n",
       "      'test': {'accuracy': 88.06, 'F1-score': 88.66, 'loss': 0.29}},\n",
       " 109: {'val': {'accuracy': 88.67, 'F1-score': 88.84, 'loss': 0.34},\n",
@@ -745,7 +745,7 @@
       "{'val': {'accuracy': 88.74, 'F1-score': 88.86, 'loss': 0.34},\n",
       " 'test': {'accuracy': 86.77, 'F1-score': 87.75, 'loss': 0.35}}\n",
       "---------TWR---------\n",
-      "2024-04-24 12:09:21,632\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-24 14:43:14,666\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 109 38 14 44\n",
       "{29: {'val': {'accuracy': 90.88, 'F1-score': 90.9, 'loss': 1.1},\n",
       "      'test': {'accuracy': 88.76, 'F1-score': 89.25, 'loss': 1.21}},\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -805,19 +805,19 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "0 66 35 8 9\n",
-      "{38: {'val': {'acc_pipline': 90.08, 'f1_pipline': 89.85, 'accuracy': 89.79, 'F1-score': 89.28, 'loss': 1.23},\n",
-      "      'test': {'acc_pipline': 88.92, 'f1_pipline': 89.21, 'accuracy': 89.58, 'F1-score': 89.52, 'loss': 1.15}},\n",
-      " 29: {'val': {'acc_pipline': 90.62, 'f1_pipline': 90.36, 'accuracy': 89.78, 'F1-score': 89.15, 'loss': 1.26},\n",
-      "      'test': {'acc_pipline': 89.51, 'f1_pipline': 89.65, 'accuracy': 89.49, 'F1-score': 89.21, 'loss': 1.16}},\n",
-      " 14: {'val': {'acc_pipline': 90.13, 'f1_pipline': 89.96, 'accuracy': 89.8, 'F1-score': 89.3, 'loss': 1.24},\n",
-      "      'test': {'acc_pipline': 88.74, 'f1_pipline': 89.12, 'accuracy': 89.47, 'F1-score': 89.4, 'loss': 1.15}},\n",
-      " 44: {'val': {'acc_pipline': 90.45, 'f1_pipline': 90.35, 'accuracy': 90.0, 'F1-score': 89.62, 'loss': 1.34},\n",
-      "      'test': {'acc_pipline': 88.7, 'f1_pipline': 89.12, 'accuracy': 89.27, 'F1-score': 89.27, 'loss': 1.24}},\n",
-      " 109: {'val': {'acc_pipline': 90.35, 'f1_pipline': 90.1, 'accuracy': 89.58, 'F1-score': 88.99, 'loss': 1.23},\n",
-      "       'test': {'acc_pipline': 89.05, 'f1_pipline': 89.27, 'accuracy': 89.14, 'F1-score': 88.99, 'loss': 1.17}}}\n",
-      "{'val': {'acc_pipline': 90.33, 'f1_pipline': 90.12, 'accuracy': 89.79, 'F1-score': 89.27, 'loss': 1.26},\n",
-      " 'test': {'acc_pipline': 88.98, 'f1_pipline': 89.27, 'accuracy': 89.39, 'F1-score': 89.28, 'loss': 1.17}}\n"
+      "0 77 0 0 77\n",
+      "{29: {'val': {'acc_pipline': 90.67, 'f1_pipline': 90.43, 'accuracy': 89.92, 'F1-score': 89.36, 'loss': 1.25},\n",
+      "      'test': {'acc_pipline': 89.5, 'f1_pipline': 89.65, 'accuracy': 89.6, 'F1-score': 89.38, 'loss': 1.16}},\n",
+      " 38: {'val': {'acc_pipline': 90.16, 'f1_pipline': 89.93, 'accuracy': 89.74, 'F1-score': 89.2, 'loss': 1.25},\n",
+      "      'test': {'acc_pipline': 88.82, 'f1_pipline': 89.11, 'accuracy': 89.59, 'F1-score': 89.52, 'loss': 1.16}},\n",
+      " 14: {'val': {'acc_pipline': 90.18, 'f1_pipline': 90.03, 'accuracy': 90.01, 'F1-score': 89.54, 'loss': 1.25},\n",
+      "      'test': {'acc_pipline': 88.75, 'f1_pipline': 89.15, 'accuracy': 89.43, 'F1-score': 89.37, 'loss': 1.16}},\n",
+      " 44: {'val': {'acc_pipline': 90.48, 'f1_pipline': 90.41, 'accuracy': 90.25, 'F1-score': 89.95, 'loss': 1.35},\n",
+      "      'test': {'acc_pipline': 88.71, 'f1_pipline': 89.15, 'accuracy': 89.26, 'F1-score': 89.32, 'loss': 1.26}},\n",
+      " 109: {'val': {'acc_pipline': 90.39, 'f1_pipline': 90.15, 'accuracy': 89.7, 'F1-score': 89.17, 'loss': 1.23},\n",
+      "       'test': {'acc_pipline': 89.1, 'f1_pipline': 89.32, 'accuracy': 89.2, 'F1-score': 89.11, 'loss': 1.17}}}\n",
+      "{'val': {'acc_pipline': 90.38, 'f1_pipline': 90.19, 'accuracy': 89.92, 'F1-score': 89.44, 'loss': 1.27},\n",
+      " 'test': {'acc_pipline': 88.98, 'f1_pipline': 89.28, 'accuracy': 89.42, 'F1-score': 89.34, 'loss': 1.18}}\n"
      ]
     }
    ],
@@ -828,7 +828,7 @@
     "metric_for_compare = \"accuracy\"\n",
     "\n",
     "times = \"0.1\"\n",
-    "ratio = 1\n",
+    "ratio = 0.8\n",
     "# times=\"None\"\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -875,10 +875,29 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-24 12:35:47,896 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/42\u001b[0m\n",
-      "2024-04-24 12:35:47,896\u001b[32m <INFO> WatchDog: success/total: 0/1\u001b[0m\n",
-      "{}\n",
-      "{}\n"
+      "2024-04-24 23:08:32,142\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
+      "{3: {'val': {'accuracy': 89.48, 'F1-score': 89.48, 'loss': 0.29},\n",
+      "     'test': {'accuracy': 88.11, 'F1-score': 88.75, 'loss': 0.3}},\n",
+      " 54: {'val': {'accuracy': 89.2, 'F1-score': 89.21, 'loss': 0.35},\n",
+      "      'test': {'accuracy': 87.5, 'F1-score': 88.3, 'loss': 0.34}},\n",
+      " 38: {'val': {'accuracy': 89.37, 'F1-score': 89.42, 'loss': 0.29},\n",
+      "      'test': {'accuracy': 87.22, 'F1-score': 88.07, 'loss': 0.3}},\n",
+      " 62: {'val': {'accuracy': 89.7, 'F1-score': 89.94, 'loss': 0.26},\n",
+      "      'test': {'accuracy': 87.04, 'F1-score': 87.99, 'loss': 0.32}},\n",
+      " 4: {'val': {'accuracy': 89.51, 'F1-score': 89.74, 'loss': 0.32},\n",
+      "     'test': {'accuracy': 86.98, 'F1-score': 87.97, 'loss': 0.37}}}\n",
+      "{'val': {'accuracy': 89.45, 'F1-score': 89.56, 'loss': 0.3},\n",
+      " 'test': {'accuracy': 87.37, 'F1-score': 88.22, 'loss': 0.33}}\n",
+      "---------TWR---------\n",
+      "2024-04-24 23:08:32,145 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/38\u001b[0m\n",
+      "2024-04-24 23:08:32,146\u001b[32m <INFO> WatchDog: success/total: 2/3\u001b[0m\n",
+      "best_sedds_of_stage1:  42 109\n",
+      "{42: {'val': {'accuracy': 90.3, 'F1-score': 90.31, 'loss': 1.14},\n",
+      "      'test': {'accuracy': 88.34, 'F1-score': 88.93, 'loss': 1.28}},\n",
+      " 109: {'val': {'accuracy': 90.13, 'F1-score': 90.13, 'loss': 1.21},\n",
+      "       'test': {'accuracy': 87.63, 'F1-score': 88.32, 'loss': 1.36}}}\n",
+      "{'val': {'accuracy': 90.22, 'F1-score': 90.22, 'loss': 1.17},\n",
+      " 'test': {'accuracy': 87.98, 'F1-score': 88.62, 'loss': 1.32}}\n"
      ]
     }
    ],
@@ -892,7 +911,11 @@
     "top_k = 5\n",
     "\n",
     "print(\"---------baseline---------\")\n",
-    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "seeds_dir = Path(\"outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "# for seed_dir in seeds_dir.iterdir():\n",
+    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "#         shutil.rmtree(seed_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
     "# seeds = \"29 109 38 14 44\"\n",
     "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
@@ -900,19 +923,19 @@
     "pp(mean)\n",
     "\n",
     "\n",
-    "# print(\"---------TWR---------\")\n",
-    "# seeds_dir = \"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
-    "# seeds_dir = Path(seeds_dir)\n",
-    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
-    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# best_seeds_of_stage1 = metric_dict_topk.keys()\n",
-    "# if len(best_seeds_of_stage1) >= 10:\n",
-    "#     for seed_dir in seeds_dir.iterdir():\n",
-    "#         if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
-    "#             shutil.rmtree(seed_dir)\n",
-    "# print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
-    "# pp(metric_dict_topk)\n",
-    "# pp(mean)"
+    "print(\"---------TWR---------\")\n",
+    "seeds_dir = \"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
+    "seeds_dir = Path(seeds_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "best_seeds_of_stage1 = metric_dict_topk.keys()\n",
+    "if len(best_seeds_of_stage1) >= 10:\n",
+    "    for seed_dir in seeds_dir.iterdir():\n",
+    "        if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
+    "            shutil.rmtree(seed_dir)\n",
+    "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)"
    ]
   },
   {
@@ -933,8 +956,8 @@
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
-    "    seeds_dir = f\"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
+    "    seeds_dir = f\"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
+    "    seeds_dir = f\"outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
@@ -956,6 +979,83 @@
     "print(\" \".join(seeds))\n",
     "pp(metric_dict_topk, width=120)\n",
     "pp(mean, width=120)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RoBERTa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------baseline---------\n",
+      "2024-04-24 23:02:14,992\u001b[32m <INFO> WatchDog: success/total: 7/7\u001b[0m\n",
+      "{54: {'val': {'accuracy': 89.93, 'F1-score': 89.94, 'loss': 0.28},\n",
+      "      'test': {'accuracy': 88.02, 'F1-score': 88.69, 'loss': 0.31}},\n",
+      " 38: {'val': {'accuracy': 89.25, 'F1-score': 89.35, 'loss': 0.29},\n",
+      "      'test': {'accuracy': 87.37, 'F1-score': 88.23, 'loss': 0.3}},\n",
+      " 62: {'val': {'accuracy': 89.6, 'F1-score': 89.86, 'loss': 0.27},\n",
+      "      'test': {'accuracy': 86.9, 'F1-score': 87.91, 'loss': 0.32}},\n",
+      " 109: {'val': {'accuracy': 89.01, 'F1-score': 89.25, 'loss': 0.33},\n",
+      "       'test': {'accuracy': 86.75, 'F1-score': 87.81, 'loss': 0.37}},\n",
+      " 0: {'val': {'accuracy': 89.3, 'F1-score': 89.53, 'loss': 0.35},\n",
+      "     'test': {'accuracy': 86.63, 'F1-score': 87.69, 'loss': 0.38}}}\n",
+      "{'val': {'accuracy': 89.42, 'F1-score': 89.59, 'loss': 0.3},\n",
+      " 'test': {'accuracy': 87.13, 'F1-score': 88.07, 'loss': 0.34}}\n",
+      "---------TWR---------\n",
+      "2024-04-24 23:02:14,994 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-roberta-wwm-ext/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/42\u001b[0m\n",
+      "2024-04-24 23:02:14,994\u001b[32m <INFO> WatchDog: success/total: 0/1\u001b[0m\n",
+      "best_sedds_of_stage1:  \n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from toolkit.training import WatchDog\n",
+    "from toolkit.metric import MetricDict\n",
+    "from pprint import pp\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "top_k = 5\n",
+    "\n",
+    "print(\"---------baseline---------\")\n",
+    "seeds_dir = Path(\"outputs/LCQMC/chinese-roberta-wwm-ext/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "# for seed_dir in seeds_dir.iterdir():\n",
+    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "#         shutil.rmtree(seed_dir)\n",
+    "\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# seeds = \"29 109 38 14 44\"\n",
+    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
+    "\n",
+    "\n",
+    "print(\"---------TWR---------\")\n",
+    "seeds_dir = \"outputs/LCQMC/chinese-roberta-wwm-ext/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05\"\n",
+    "seeds_dir = Path(seeds_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "best_seeds_of_stage1 = metric_dict_topk.keys()\n",
+    "if len(best_seeds_of_stage1) >= 10:\n",
+    "    for seed_dir in seeds_dir.iterdir():\n",
+    "        if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
+    "            shutil.rmtree(seed_dir)\n",
+    "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)"
    ]
   },
   {
