--- a/aio.ipynb
+++ b/aio.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-24 14:43:14,664\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-25 14:54:03,082\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{29: {'val': {'accuracy': 89.18, 'F1-score': 89.09, 'loss': 0.3},\n",
       "      'test': {'accuracy': 88.06, 'F1-score': 88.66, 'loss': 0.29}},\n",
       " 109: {'val': {'accuracy': 88.67, 'F1-score': 88.84, 'loss': 0.34},\n",
@@ -915,7 +915,7 @@
       "{'val': {'accuracy': 88.74, 'F1-score': 88.86, 'loss': 0.34},\n",
       " 'test': {'accuracy': 86.77, 'F1-score': 87.75, 'loss': 0.35}}\n",
       "---------TWR---------\n",
-      "2024-04-24 14:43:14,666\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-25 14:54:03,084\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 109 38 14 44\n",
       "{29: {'val': {'accuracy': 90.88, 'F1-score': 90.9, 'loss': 1.1},\n",
       "      'test': {'accuracy': 88.76, 'F1-score': 89.25, 'loss': 1.21}},\n",
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-24 23:08:32,142\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
+      "2024-04-25 15:14:24,843\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
       "{3: {'val': {'accuracy': 89.48, 'F1-score': 89.48, 'loss': 0.29},\n",
       "     'test': {'accuracy': 88.11, 'F1-score': 88.75, 'loss': 0.3}},\n",
       " 54: {'val': {'accuracy': 89.2, 'F1-score': 89.21, 'loss': 0.35},\n",
@@ -1059,15 +1059,21 @@
       "{'val': {'accuracy': 89.45, 'F1-score': 89.56, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.37, 'F1-score': 88.22, 'loss': 0.33}}\n",
       "---------TWR---------\n",
-      "2024-04-24 23:08:32,145 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/38\u001b[0m\n",
-      "2024-04-24 23:08:32,146\u001b[32m <INFO> WatchDog: success/total: 2/3\u001b[0m\n",
-      "best_sedds_of_stage1:  42 109\n",
+      "2024-04-25 15:14:24,847 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14\u001b[0m\n",
+      "2024-04-25 15:14:24,850\u001b[32m <INFO> WatchDog: success/total: 18/19\u001b[0m\n",
+      "best_sedds_of_stage1:  42 38 13 1 109\n",
       "{42: {'val': {'accuracy': 90.3, 'F1-score': 90.31, 'loss': 1.14},\n",
       "      'test': {'accuracy': 88.34, 'F1-score': 88.93, 'loss': 1.28}},\n",
+      " 38: {'val': {'accuracy': 90.2, 'F1-score': 90.25, 'loss': 1.15},\n",
+      "      'test': {'accuracy': 88.14, 'F1-score': 88.81, 'loss': 1.28}},\n",
+      " 13: {'val': {'accuracy': 90.23, 'F1-score': 90.4, 'loss': 1.14},\n",
+      "      'test': {'accuracy': 87.7, 'F1-score': 88.52, 'loss': 1.28}},\n",
+      " 1: {'val': {'accuracy': 90.38, 'F1-score': 90.49, 'loss': 1.15},\n",
+      "     'test': {'accuracy': 87.65, 'F1-score': 88.36, 'loss': 1.37}},\n",
       " 109: {'val': {'accuracy': 90.13, 'F1-score': 90.13, 'loss': 1.21},\n",
       "       'test': {'accuracy': 87.63, 'F1-score': 88.32, 'loss': 1.36}}}\n",
-      "{'val': {'accuracy': 90.22, 'F1-score': 90.22, 'loss': 1.17},\n",
-      " 'test': {'accuracy': 87.98, 'F1-score': 88.62, 'loss': 1.32}}\n"
+      "{'val': {'accuracy': 90.25, 'F1-score': 90.32, 'loss': 1.16},\n",
+      " 'test': {'accuracy': 87.89, 'F1-score': 88.59, 'loss': 1.31}}\n"
      ]
     }
    ],
@@ -1160,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1174,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-24 23:02:14,992\u001b[32m <INFO> WatchDog: success/total: 7/7\u001b[0m\n",
+      "2024-04-25 15:14:19,563\u001b[32m <INFO> WatchDog: success/total: 7/7\u001b[0m\n",
       "{54: {'val': {'accuracy': 89.93, 'F1-score': 89.94, 'loss': 0.28},\n",
       "      'test': {'accuracy': 88.02, 'F1-score': 88.69, 'loss': 0.31}},\n",
       " 38: {'val': {'accuracy': 89.25, 'F1-score': 89.35, 'loss': 0.29},\n",
@@ -1182,11 +1188,21 @@
       "{'val': {'accuracy': 89.42, 'F1-score': 89.59, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.13, 'F1-score': 88.07, 'loss': 0.34}}\n",
       "---------TWR---------\n",
-      "2024-04-24 23:02:14,994 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-roberta-wwm-ext/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/42\u001b[0m\n",
-      "2024-04-24 23:02:14,994\u001b[32m <INFO> WatchDog: success/total: 0/1\u001b[0m\n",
-      "best_sedds_of_stage1:  \n",
-      "{}\n",
-      "{}\n"
+      "2024-04-25 15:14:19,565 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-roberta-wwm-ext/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/10\u001b[0m\n",
+      "2024-04-25 15:14:19,566\u001b[32m <INFO> WatchDog: success/total: 14/15\u001b[0m\n",
+      "best_sedds_of_stage1:  42 38 54 62 109\n",
+      "{42: {'val': {'accuracy': 90.26, 'F1-score': 90.3, 'loss': 1.16},\n",
+      "      'test': {'accuracy': 88.18, 'F1-score': 88.85, 'loss': 1.31}},\n",
+      " 38: {'val': {'accuracy': 90.45, 'F1-score': 90.54, 'loss': 1.14},\n",
+      "      'test': {'accuracy': 87.99, 'F1-score': 88.7, 'loss': 1.29}},\n",
+      " 54: {'val': {'accuracy': 90.41, 'F1-score': 90.57, 'loss': 1.33},\n",
+      "      'test': {'accuracy': 87.7, 'F1-score': 88.5, 'loss': 1.55}},\n",
+      " 62: {'val': {'accuracy': 90.71, 'F1-score': 90.91, 'loss': 1.12},\n",
+      "      'test': {'accuracy': 87.42, 'F1-score': 88.31, 'loss': 1.37}},\n",
+      " 109: {'val': {'accuracy': 90.06, 'F1-score': 90.2, 'loss': 1.23},\n",
+      "       'test': {'accuracy': 87.17, 'F1-score': 87.99, 'loss': 1.46}}}\n",
+      "{'val': {'accuracy': 90.38, 'F1-score': 90.5, 'loss': 1.2},\n",
+      " 'test': {'accuracy': 87.69, 'F1-score': 88.47, 'loss': 1.4}}\n"
      ]
     }
    ],
