--- a/aio.ipynb
+++ b/aio.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,20 +202,21 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-26 11:16:38,886\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
-      "best_sedds_of_stage1:  97 46 3 51 47\n",
+      "2024-04-26 22:53:49,340 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/26\u001b[0m\n",
+      "2024-04-26 22:53:49,343\u001b[32m <INFO> WatchDog: success/total: 29/30\u001b[0m\n",
+      "best_sedds_of_stage1:  97 13 6 46 3\n",
       "{97: {'val': {'accuracy': 85.8, 'F1-score': 86.06, 'loss': 1.61},\n",
       "      'test': {'accuracy': 85.71, 'F1-score': 86.08, 'loss': 1.64}},\n",
+      " 13: {'val': {'accuracy': 86.24, 'F1-score': 85.74, 'loss': 2.15},\n",
+      "      'test': {'accuracy': 85.66, 'F1-score': 85.27, 'loss': 2.28}},\n",
+      " 6: {'val': {'accuracy': 86.18, 'F1-score': 85.72, 'loss': 2.23},\n",
+      "     'test': {'accuracy': 85.65, 'F1-score': 85.2, 'loss': 2.26}},\n",
       " 46: {'val': {'accuracy': 86.31, 'F1-score': 85.95, 'loss': 1.76},\n",
       "      'test': {'accuracy': 85.64, 'F1-score': 85.41, 'loss': 1.82}},\n",
       " 3: {'val': {'accuracy': 86.19, 'F1-score': 85.88, 'loss': 2.1},\n",
-      "     'test': {'accuracy': 85.62, 'F1-score': 85.4, 'loss': 2.14}},\n",
-      " 51: {'val': {'accuracy': 86.35, 'F1-score': 85.89, 'loss': 2.11},\n",
-      "      'test': {'accuracy': 85.6, 'F1-score': 85.25, 'loss': 2.2}},\n",
-      " 47: {'val': {'accuracy': 86.07, 'F1-score': 85.59, 'loss': 2.17},\n",
-      "      'test': {'accuracy': 85.55, 'F1-score': 85.12, 'loss': 2.25}}}\n",
-      "{'val': {'accuracy': 86.14, 'F1-score': 85.87, 'loss': 1.95},\n",
-      " 'test': {'accuracy': 85.62, 'F1-score': 85.45, 'loss': 2.01}}\n"
+      "     'test': {'accuracy': 85.62, 'F1-score': 85.4, 'loss': 2.14}}}\n",
+      "{'val': {'accuracy': 86.14, 'F1-score': 85.87, 'loss': 1.97},\n",
+      " 'test': {'accuracy': 85.66, 'F1-score': 85.47, 'loss': 2.03}}\n"
      ]
     }
    ],
