--- a/aio.ipynb
+++ b/aio.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-26 23:57:50,415] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from toolkit.training.initializer import allocate_gpu_memory\n",
@@ -194,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1053,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-26 23:20:17,831\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
+      "2024-04-27 00:13:12,302\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
       "{3: {'val': {'accuracy': 89.48, 'F1-score': 89.48, 'loss': 0.29},\n",
       "     'test': {'accuracy': 88.11, 'F1-score': 88.75, 'loss': 0.3}},\n",
       " 54: {'val': {'accuracy': 89.2, 'F1-score': 89.21, 'loss': 0.35},\n",
@@ -1059,8 +1067,8 @@
       "{'val': {'accuracy': 89.45, 'F1-score': 89.56, 'loss': 0.3},\n",
       " 'test': {'accuracy': 87.37, 'F1-score': 88.22, 'loss': 0.33}}\n",
       "---------TWR---------\n",
-      "2024-04-26 23:20:17,834 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/24\u001b[0m\n",
-      "2024-04-26 23:20:17,835\u001b[32m <INFO> WatchDog: success/total: 18/19\u001b[0m\n",
+      "2024-04-27 00:13:12,307 <DEBUG> WatchDog: ❌ Failed: outputs/LCQMC/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/24\u001b[0m\n",
+      "2024-04-27 00:13:12,309\u001b[32m <INFO> WatchDog: success/total: 18/19\u001b[0m\n",
       "best_sedds_of_stage1:  42 38 20 13 1\n",
       "{42: {'val': {'accuracy': 90.3, 'F1-score': 90.31, 'loss': 1.14},\n",
       "      'test': {'accuracy': 88.34, 'F1-score': 88.93, 'loss': 1.28}},\n",
