--- a/aio.ipynb
+++ b/aio.ipynb
@@ -229,13 +229,25 @@
     "\n",
     "top_k = 5\n",
     "\n",
-    "# print(\"---------baseline---------\")\n",
-    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
-    "# # metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "print(\"---------baseline---------\")\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(\"outputs/BQ/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "seeds = \"97 53 10 43 46\"\n",
+    "metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
+    "\n",
+    "print(\"---------baseline---------\")\n",
+    "seeds_dir = Path(\"outputs/LCQMC/chinese-macbert-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05\")\n",
+    "# for seed_dir in seeds_dir.iterdir():\n",
+    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "#         shutil.rmtree(seed_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
     "# seeds = \"97 53 10 43 46\"\n",
     "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "# pp(metric_dict_topk)\n",
-    "# pp(mean)\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
