--- a/aio.ipynb
+++ b/aio.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -202,14 +202,17 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-27 14:04:15,577 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/97\u001b[0m\n",
-      "2024-04-27 14:04:15,578 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/109\u001b[0m\n",
-      "2024-04-27 14:04:15,579 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/68\u001b[0m\n",
-      "2024-04-27 14:04:15,581 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/149\u001b[0m\n",
-      "2024-04-27 14:04:15,582\u001b[32m <INFO> WatchDog: success/total: 0/4\u001b[0m\n",
-      "best_sedds_of_stage1:  \n",
-      "{}\n",
-      "{}\n"
+      "2024-04-27 22:33:29,002 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/97\u001b[0m\n",
+      "2024-04-27 22:33:29,004\u001b[32m <INFO> WatchDog: success/total: 3/4\u001b[0m\n",
+      "best_sedds_of_stage1:  149 68 109\n",
+      "{149: {'val': {'accuracy': 86.06, 'F1-score': 85.72, 'loss': 1.77},\n",
+      "       'test': {'accuracy': 85.75, 'F1-score': 85.48, 'loss': 1.84}},\n",
+      " 68: {'val': {'accuracy': 86.42, 'F1-score': 86.14, 'loss': 1.76},\n",
+      "      'test': {'accuracy': 85.48, 'F1-score': 85.26, 'loss': 1.81}},\n",
+      " 109: {'val': {'accuracy': 86.33, 'F1-score': 86.15, 'loss': 1.57},\n",
+      "       'test': {'accuracy': 85.28, 'F1-score': 85.11, 'loss': 1.67}}}\n",
+      "{'val': {'accuracy': 86.27, 'F1-score': 86.0, 'loss': 1.7},\n",
+      " 'test': {'accuracy': 85.5, 'F1-score': 85.28, 'loss': 1.77}}\n"
      ]
     }
    ],
@@ -3308,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3316,7 +3319,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-22 19:22:24,162\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "2024-04-27 22:07:28,960\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
       "{9: {'val': {'accuracy': 88.73, 'F1-score': 91.99, 'loss': 0.28},\n",
       "     'test': {'accuracy': 87.3, 'F1-score': 90.73, 'loss': 0.3}},\n",
       " 37: {'val': {'accuracy': 89.22, 'F1-score': 92.25, 'loss': 0.28},\n",
@@ -3330,7 +3333,7 @@
       "{'val': {'accuracy': 89.02, 'F1-score': 92.08, 'loss': 0.28},\n",
       " 'test': {'accuracy': 86.99, 'F1-score': 90.32, 'loss': 0.32}}\n",
       "---------TWR---------\n",
-      "2024-04-22 19:22:24,174\u001b[32m <INFO> WatchDog: success/total: 57/57\u001b[0m\n",
+      "2024-04-27 22:07:28,965\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  9 37 59 2 44\n",
       "{9: {'val': {'accuracy': 88.24, 'F1-score': 91.58, 'loss': 1.51},\n",
       "     'test': {'accuracy': 88.41, 'F1-score': 91.47, 'loss': 1.54}},\n",
