--- a/aio.ipynb
+++ b/aio.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-25 22:20:41,802\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-29 00:51:08,321\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{29: {'val': {'accuracy': 89.18, 'F1-score': 89.09, 'loss': 0.3},\n",
       "      'test': {'accuracy': 88.06, 'F1-score': 88.66, 'loss': 0.29}},\n",
       " 109: {'val': {'accuracy': 88.67, 'F1-score': 88.84, 'loss': 0.34},\n",
@@ -919,7 +919,7 @@
       "{'val': {'accuracy': 88.74, 'F1-score': 88.86, 'loss': 0.34},\n",
       " 'test': {'accuracy': 86.77, 'F1-score': 87.75, 'loss': 0.35}}\n",
       "---------TWR---------\n",
-      "2024-04-25 22:20:41,806\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-29 00:51:08,334\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  29 109 38 14 44\n",
       "{29: {'val': {'accuracy': 90.88, 'F1-score': 90.9, 'loss': 1.1},\n",
       "      'test': {'accuracy': 88.76, 'F1-score': 89.25, 'loss': 1.21}},\n",
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,6 @@
     "metric_for_compare = \"acc_pipline\"\n",
     "metric_for_compare = \"accuracy\"\n",
     "\n",
-    "times = \"0.1\"\n",
     "ratio = 0.8\n",
     "# times=\"None\"\n",
     "metric_dicts = dict()\n",
@@ -1041,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1049,20 +1048,20 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-28 14:56:23,372\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
-      "best_sedds_of_stage1:  42 38 54 62 109\n",
+      "2024-04-29 00:59:04,143\u001b[32m <INFO> WatchDog: success/total: 12/12\u001b[0m\n",
+      "best_sedds_of_stage1:  42 38 54 1 62\n",
       "{42: {'val': {'accuracy': 90.73, 'F1-score': 90.78, 'loss': 1.11},\n",
       "      'test': {'accuracy': 88.71, 'F1-score': 89.28, 'loss': 1.28}},\n",
       " 38: {'val': {'accuracy': 90.56, 'F1-score': 90.62, 'loss': 1.14},\n",
       "      'test': {'accuracy': 88.25, 'F1-score': 88.9, 'loss': 1.27}},\n",
       " 54: {'val': {'accuracy': 90.29, 'F1-score': 90.38, 'loss': 1.32},\n",
       "      'test': {'accuracy': 87.98, 'F1-score': 88.68, 'loss': 1.47}},\n",
+      " 1: {'val': {'accuracy': 90.68, 'F1-score': 90.83, 'loss': 1.12},\n",
+      "     'test': {'accuracy': 87.8, 'F1-score': 88.53, 'loss': 1.34}},\n",
       " 62: {'val': {'accuracy': 90.93, 'F1-score': 91.11, 'loss': 1.11},\n",
-      "      'test': {'accuracy': 87.55, 'F1-score': 88.4, 'loss': 1.33}},\n",
-      " 109: {'val': {'accuracy': 90.31, 'F1-score': 90.49, 'loss': 1.2},\n",
-      "       'test': {'accuracy': 87.46, 'F1-score': 88.24, 'loss': 1.41}}}\n",
-      "{'val': {'accuracy': 90.56, 'F1-score': 90.68, 'loss': 1.18},\n",
-      " 'test': {'accuracy': 87.99, 'F1-score': 88.7, 'loss': 1.35}}\n"
+      "      'test': {'accuracy': 87.55, 'F1-score': 88.4, 'loss': 1.33}}}\n",
+      "{'val': {'accuracy': 90.64, 'F1-score': 90.74, 'loss': 1.16},\n",
+      " 'test': {'accuracy': 88.06, 'F1-score': 88.76, 'loss': 1.34}}\n"
      ]
     }
    ],
@@ -2905,7 +2904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2913,12 +2912,12 @@
      "output_type": "stream",
      "text": [
       "---------TWR---------\n",
-      "2024-04-28 14:58:34,944 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05/44\u001b[0m\n",
-      "2024-04-28 14:58:34,945\u001b[32m <INFO> WatchDog: success/total: 2/3\u001b[0m\n",
-      "best_sedds_of_stage1:  78 52\n",
-      "{78: {'val': {'accuracy': 91.33, 'F1-score': 88.56, 'loss': 1.01}},\n",
-      " 52: {'val': {'accuracy': 91.26, 'F1-score': 88.46, 'loss': 1.0}}}\n",
-      "{'val': {'accuracy': 91.3, 'F1-score': 88.51, 'loss': 1.0}}\n"
+      "2024-04-28 20:37:40,302\u001b[32m <INFO> WatchDog: success/total: 3/3\u001b[0m\n",
+      "best_sedds_of_stage1:  44 78 52\n",
+      "{44: {'val': {'accuracy': 91.44, 'F1-score': 88.6, 'loss': 1.02}},\n",
+      " 78: {'val': {'accuracy': 91.33, 'F1-score': 88.51, 'loss': 1.05}},\n",
+      " 52: {'val': {'accuracy': 91.3, 'F1-score': 88.48, 'loss': 1.02}}}\n",
+      "{'val': {'accuracy': 91.36, 'F1-score': 88.53, 'loss': 1.03}}\n"
      ]
     }
    ],
@@ -2946,7 +2945,7 @@
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
-    "seeds_dir = \"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05\"\n",
+    "seeds_dir = \"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/4e-05\"\n",
     "seeds_dir = Path(seeds_dir)\n",
     "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
     "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
